# A.N.C.L.A.W.-bot-py

./: .gitignore  CONFIG.json  CONFIG.py  MAIN.bat  MAIN.py  MAIN2.py  MAIN3.bat  MAIN3.py  Middlewares.py  README.md  Server.py  __init__.py  audio.db  builders.py  enums.py  exceptions.py  hadlers_rules.py  keyboards.py  managers.py  online_tools.py  p.py  peers.db  peers_quotes.db  peers_roles.db  peers_words.db  requirements.txt  resend_function.py  resend_parser.py  respond_func.py  respond_priv.py  respond_who.py  respondent.py  respondent_func.py  runServer.bat  sessions.py  sessions_tg.py  sessions_vk.py  states.db  stickers_tg.json  stickers_vk.json  (+4 more)
For 1-core cpu/: MAIN.py  MAIN2.py  MAIN3.py
For multicore cpu/: MAIN.py
config_form/: CONFIG.json  CONFIG.py  peers.db  peers_quotes.db  peers_words.db
database_module/: Tables.py  cabal_repo.py  hash.db  markov_repo.py  marry_repo.py  operations_repo.py  peer.db  peer_quotes.db  peer_repo.py  peer_roles.db  peer_texts_markov.db  peer_words.db  quote_repo.py  roles_repo.py  words_repo.py
handlers/: __init__.py  message_new.py  raw_event.py  respond_func.py  respond_priv.py  respond_who.py  template_response_handler.py
handlers/func_modules/: administration_module.py  cabal_module.py  funny_module.py  info_module.py  managers.py
handlers/kb_handlers/: func_handler_keyboard.py  keyboard_handler.py
handlers/who_modules/: marry.py  role_handler.py  roles.py
images_editor/: __init__.py  demotivator.py  image_gen.py  tools_img.py
lintg1/: pyproject.toml
lintg1/tests/: test_lintg1.py
markov/: generator_settings_manager.py  generators.py
run/: MAIN.py  MAIN2.py
services/: request_dimMe.py
temps/: 338191776_1778615967_56009.json
tg_modules/: Middlewares.py  api_vk_helper.py  states.py  tg_tools.py  tools.py
tg_modules/handlers/: __init__.py  commands.py  commands_repos.py  err.py  exc_comm.py  filters.py  genertion_func.py  kb_handler.py  keyboard.py  type_handlers.py
venvtgbot/: pyproject.toml
venvvkbot/: poetry.toml  pyproject.toml
vk_modules/: Middlewares.py  exceptions.py  hadlers_rules.py  online_tools.py
vk_modules/func_modules/: administration_module.py  cabal_module.py  funny_module.py  generators.py  info_module.py  managers.py
vk_modules/handlers/: __init__.py  keyboard_handler.py  message_new.py  raw_event.py  respond_func.py  respond_priv.py  respond_who.py  template_response_handler.py
vk_modules/kb_handlers/: func_handler_keyboard.py
vk_modules/who_modules/: marry.py  role_handler.py  roles.py
