[tool.poetry]
name = "lintg1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
aiogram = "3.3.0"
aiosqlite = "0.19.0"
aiovk = "4.1.0"
aiozipstream = "0.4"
loguru = "0.7.2"
markovify = "0.9.4"
pytelegrambotapi = "4.14.1"
sqlalchemy = "2.0.25"
vk-api = "11.9.9"
pillow = "^10.2.0"
Telethon = "^1.33.1"
pickleDB = "^0.9.2"
psutil = "^5.9.7"
sciagraph = "^2023.6.1"
asyncpg = "^0.29.0"
memray = "^1.11.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
scalene = "1.5.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
