[tool.poetry]
name = "venvvkbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
aiosqlite = "0.19.0"
aiozipstream = "0.4"
altgraph = "0.17.4"
annotated-types = "0.6.0"
anyio = "4.2.0"
asgiref = "3.7.2"
async-timeout = "4.0.3"
asynctest = "0.13.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.2"
blinker = "1.7.0"
bottle = "0.12.25"
bottle-websocket = "0.2.9"
bs4 = "0.0.1"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
choicelib = "0.1.5"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
cycler = "0.12.1"
distlib = "0.3.8"
django = "5.0.1"
eel = "0.16.0"
filelock = "3.13.1"
flask = "3.0.0"
fonttools = "4.47.0"
frozenlist = "1.4.1"
future = "0.18.3"
gevent = "23.9.1"
gevent-websocket = "0.10.1"
greenlet = "3.0.3"
idna = "3.6"
importlib-metadata = "7.0.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
kiwisolver = "1.4.5"
line-profiler = "4.1.2"
loguru = "0.7.2"
magic-filter = "1.0.12"
markovify = "0.9.4"
markupsafe = "2.1.3"
matplotlib = "3.8.2"
multidict = "6.0.4"
numpy = "1.26.3"
packaging = "23.2"
pefile = "2023.2.7"
pickledb = "0.9.2"
pillow = "10.2.0"
platformdirs = "4.1.0"
pprofile = "2.1.0"
psutil = "5.9.7"
py-heat = "0.0.6"
pyaes = "1.6.1"
pyasn1 = "0.5.1"
pycparser = "2.21"
pymarkovchain = "1.8"
pyparsing = "3.1.1"
pytelegrambotapi = "4.14.1"
python-dateutil = "2.8.2"
pywin32-ctypes = "0.2.2"
requests = "2.31.0"
rsa = "4.9"
schedule = "1.2.1"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.25"
sqlparse = "0.4.4"
telethon = "1.33.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
unidecode = "1.3.7"
urllib3 = "2.1.0"
vbml = "1.1.post1"
virtualenv = "20.25.0"
virtualenvwrapper-win = "1.2.7"
vk-api = "11.9.9"
vkbottle = "4.3.12"
watchfiles = "0.18.1"
werkzeug = "3.0.1"
whichcraft = "0.6.1"
win32-setctime = "1.1.0"
yarl = "1.9.4"
zipp = "3.17.0"
zipstream = "1.1.4"
zope-event = "5.0"
zope-interface = "6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
